--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ osx_installer/create-dmg-master/builder/create-dmg.builder
 80000218_2040x1268.bpm
 platform/build-MLVApp-Desktop_Qt_5_15_3_clangOMP_64bit-Release/*
 platform/build-MLVApp-Desktop_Qt_5_15_3_llvm15OMP_64bit-Release/*
+platform/build*
